a* improvements + fixes for search strategy